--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
+  "buildCommand": "cd openstory-app && npm install && npm run build",
   "outputDirectory": "openstory-app/build",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "framework": null
 } 
