Add: Configurazione API OpenRouter e file .env.example

--- a/openstory-app/.env.example
+++ b/openstory-app/.env.example
@@ -1,1 +1,8 @@
-REACT_APP_OPENROUTER_API_KEY=sk-or-v1-demo-key-for-testing
+# OpenRouter API Configuration
+REACT_APP_OPENROUTER_API_KEY=sk-or-v1-your-key-here
+
+# DeepSeek API Configuration (opzionale)
+REACT_APP_DEEPSEEK_API_KEY=
+
+# OpenVoice API Configuration (opzionale)
+REACT_APP_OPENVOICE_API_URL=http://localhost:8000
