Update: Aggiunta configurazione DeepSeek API al file .env.example

--- a/openstory-app/.env.example
+++ b/openstory-app/.env.example
@@ -1,8 +1,11 @@
 # OpenRouter API Configuration
-REACT_APP_OPENROUTER_API_KEY=sk-or-v1-your-key-here
+REACT_APP_OPENROUTER_API_KEY=sk-or-v1-your-openrouter-key-here
 
-# DeepSeek API Configuration (opzionale)
-REACT_APP_DEEPSEEK_API_KEY=
+# DeepSeek API Configuration (fallback gratuito)
+REACT_APP_DEEPSEEK_API_KEY=sk-your-deepseek-key-here
 
-# OpenVoice API Configuration (opzionale)
+# OpenVoice API Configuration (opzionale - per narrazione vocale)
 REACT_APP_OPENVOICE_API_URL=http://localhost:8000
+
+# Environment Configuration
+REACT_APP_ENVIRONMENT=production
