🎙️ INTEGRAZIONE OPENVOICE COMPLETATA - Sostituito TTS browser con voci italiane professionali. Implementati: servizio OpenVoice completo, 6 voci italiane, controlli avanzati, voice cloning, script automatici. Qualità audio broadcast, pronuncia italiana perfetta, interfaccia ottimizzata.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OpenVoice server (repository esterno)
+OpenVoice_server/
+
+# File di backup
+*.backup
+openstory-app/.env.backup
+openstory-app/src/.env
